[MOD] Cleanups (IntelliJ, UCDetector, SpotBugs)